--- a/app/src/views/home/login.ejs
+++ b/app/src/views/home/login.ejs
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- app.js에서 미들웨어 처리해준 src/public 안의 js폴더 안으로 들어갈수있게 됨.-->
+    <script src="/js/home/login.js"></script>
     <title>Document</title>
 </head>
 <body>
