--- a/app/src/views/home/register.ejs
+++ b/app/src/views/home/register.ejs
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/css/home/login.css">    
     <!-- app.js에서 미들웨어 처리해준 src/public 안의 js폴더 안으로 들어갈수있게 됨.-->
     <!-- script 태그의 defer 속성은 페이지가 모두 로드된 후에 해당 외부 스크립트가 실행됨을 명시합니다. -->
-    <script src="/js/home/login.js" defer></script>
+    <script src="/js/home/register.js" defer></script>
     <title>Document</title>
 </head>
 <body>
@@ -19,7 +19,7 @@
             <input id ="name" type="text" placeholder="이름"/>
             <input id ="psword" type="password" placeholder="비밀번호"/>
             <input id ="confirm-psword" type="password" placeholder="비밀번호 확인"/>
-            <button>SIGN UP</button>
+            <p id = "button">SIGN UP</p>
             <p class="message">Already registered? <a href="/login">login</a></p>
           </form>
         </div>
